# file_analyzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  setup_linux.sh
common/include/: print_helper.h
common/src/: CMakeLists.txt  print_helper.c
include/: coff_header.h  constants.h  data_directory.h  entropy.h  file_context.h  heuristics.h  optional_header.h  pattern.h  pe_utils.h  print_helper.h  section_header.h
src/: CMakeLists.txt  constants.c  entropy.c  file_context.c  heuristics.c  main.c  pattern.c  pe_utils.c  print_helper.c
windows/: main.c
windows/lib/: file_context.h  heuristics.h  logs.h  pe_utils.h
windows/src/: CMakeLists.txt  file_context.c  heuristics.c  logs.c  pe_utils.c
